--- a/estate_nursery/reports/reportplantation_prenursery_div.xml
+++ b/estate_nursery/reports/reportplantation_prenursery_div.xml
@@ -55,7 +55,7 @@
                         </div>
 
                       <!-- Forth ROW -->
-                      <div class="row ">
+                      <div class="row col-xs-12" style="border: 1px solid #568eff;">
                             <t t-foreach="o.batch_ids"  t-as="i">
                                 <div class="col-xs-12">
                                     <div class="col-xs-1" style="border-left:1px solid #568eff;">
@@ -147,22 +147,22 @@
                     </div>
 
                     <!-- Fifth ROW -->
-                    <div class="row col-xs-12">
+                    <div class="row col-xs-12" style="border: 1px solid #568eff;">
                         <div class="col-xs-2" style="text-align:right;border: 1px solid #568eff;">
                             <p><strong>Total:</strong></p>
                         </div>
-                        <div class="col-xs-1" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
+                        <div class="col-xs-1" style="text-align:center;border: 1px solid #568eff;border-left:0px;">
                             <span t-field="o.total_do"/>
                         </div>
-                        <div class="col-xs-1" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
+                        <div class="col-xs-1" style="text-align:center;border: 1px solid #568eff;border-left:0px;">
                             <span t-field="o.total_planted"/>
                         </div>
-                        <div class="col-xs-8" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
+                        <div class="col-xs-8" style="text-align:center;">
                             <div class="col-xs-12">
                                 <div class="col-xs-1" ><p></p></div>
                                 <div class="col-xs-1" ><p></p></div>
                                 <div class="col-xs-1" ><p></p></div>
-                                <div class="col-xs-5" style="border-left:0px;">
+                                <div class="col-xs-5" >
                                     <div class="col-xs-12">
                                         <div class="col-xs-2" style="border-left:1px solid #568eff;">
                                         </div>
@@ -192,11 +192,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-2" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
-                                    <span><strong>150.00</strong></span>
+                                <div class="col-xs-2" style="text-align:center;border-left:1px solid #568eff;">
                                 </div>
-                                <div class="col-xs-2" style="text-align:right;border: 1px solid #568eff;border-left:0px;">
-                                    <span><strong>150.00</strong></span>
+                                <div class="col-xs-2" style="text-align:center;border-left:1px solid #568eff;">
                                 </div>
                             </div>
                         </div>
